# ai-based-ivr-system

./: .gitignore  README.md  app.py  flow.html  requirements.txt
backend/: .gitignore  app.py
backend/datahandler/: school_data_scrape.py
backend/helpers/: audio_samples_generator.py  chatters.py  chroma_helpers.py  data_helpers.py  email_helper.py  llm.py  voice_helpers.py
backend/routes/: complaints.py  email_routes.py  emergency.py  general_questions.py  language_routes.py  ncert_questions.py  nearby_schools.py  scholarships.py
backend/static/css/: styles.css
backend/templates/: index.html
backend/templates/components/: ncert_questions.html  nearby_schools.html  scholarships.html
frontend/: package.json  pnpm-lock.yaml
helpers/: chatters.py  llm.py  voice_helpers.py
ivr-server/: .gitignore  pyproject.toml
ivr-server/app/: main.py
ivr-server/app/constant/: __init__.py
ivr-server/app/helpers/: __init__.py  transcribe.py
ivr-server/app/routes/: __init__.py  calls.py  options.py  services.py
ivr-server/app/sockets/: __init__.py  audio.py
routes/: complaints.py  emergency.py  language_routes.py  nearby_schools.py  scholarships.py  update_records.py
templates/: index.html
templates/components/: complaints.html  emergency.html  general_questions.html  nearby_schools.html  scholarships.html  update_records.html
